# rc-building-model

./: .codacy.yml  .coveragerc  .gitattributes  .travis.yml  CHANGELOG.md  README.md  appveyor.yml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
conda.recipe/: meta.yaml
rc_building_model/: __main__.py  _version.py  cli.py  dim.py  fab.py  htuse.py  vent.py
rcbm/: fab.py  htuse.py  vent.py
tests/: conftest.py  test_cli.py  test_dim.py  test_fab.py  test_htuse.py  test_vent.py
