[tool.poetry]
name = "rcbm"
version = "0.2.3"
description = "A Resistance Capacitance (RC) Model for the Simulation of Building Stock Energy Usage"
authors = ["Rowan Molony <rowan.molony@codema.ie>"]
license = "MIT"
repository = "https://github.com/codema-dev/rc-building-model"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
pandas-stubs = "^1.2"
pandera = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
